# teeobserver

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: log-viewer.html  main.rs  routes.rs  structures.rs  util.rs
