[package]
name = "teeobserver"
version = "0.1.0"
edition = "2021"
authors = ["Edgar <git@edgarluque.com>"]
license = "AGPL-3.0"
repository = "https://github.com/edg-l/teeobserver"
homepage = "https://github.com/edg-l/teeobserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = { version = "0.6.20", features = ["headers", "ws"] }
time = { version = "0.3.28", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tar = "0.4.40"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
zstd = "0.12.4"
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "time", "migrate", "uuid"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.11.20", features = ["json"] }
tower-http = { version = "0.4.4", features = ["full"] }
thiserror = "1.0.48"
headers = "0.3.9"
validator = { version = "0.16.1", features = ["derive"] }
anyhow = "1.0.75"
http = "0.2.9"
tower = { version = "0.4.13", features = ["util"] }
