[package]
name = "teeobserver"
version = "0.2.0"
edition = "2024"
authors = ["Edgar <git@edgarluque.com>"]
license = "AGPL-3.0"
repository = "https://github.com/edg-l/teeobserver"
homepage = "https://github.com/edg-l/teeobserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
time = { version = "0.3.41", features = ["serde", "formatting"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tar = "0.4.44"
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zstd = "0.13.3"
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.15", features = ["json"] }
tower-http = { version = "0.6.4", features = ["full"] }
thiserror = "2.0.12"
headers = "0.4.0"
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.98"
http = "1.3.1"
tower = { version = "0.5.2", features = ["util"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
