[package]
name = "teeobserver"
version = "0.2.0"
edition = "2024"
authors = ["Edgar <git@edgarluque.com>"]
license = "AGPL-3.0"
description = "A tool to broadcast DDNet / Teeworlds master server events."
keywords = ["ddnet", "teeworlds"]
repository = "https://github.com/edg-l/teeobserver"
homepage = "https://github.com/edg-l/teeobserver"

[profile.release]
lto = "fat"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
time = { version = "0.3.41", features = ["serde", "formatting"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.15", features = ["json"] }
tower-http = { version = "0.6.4", features = ["full"] }
headers = "0.4.0"
anyhow = "1.0.98"
http = "1.3.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
